ARROW-11379: [C++][Dataset] Better formatting for timestamp scalars

The bug listed in ARROW-11379 was fixed in ARROW-8919, so I've added a test and better formatting for temporal scalars so that filters on timestamps are clearer:

```python
In [1]: ds.field("dates") > pd.Timestamp("2012-01-01")
Out[1]: <pyarrow.dataset.Expression (dates > 2012-01-01 00:00:00.000000)>
```

Closes #9466 from bkietz/11379-Reading-dataset-with-filt

Authored-by: Benjamin Kietzman <bengilgit@gmail.com>
Signed-off-by: Benjamin Kietzman <bengilgit@gmail.com>